deploy/k8s/ingress/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: skillbased.io
    http:
      paths:
        - backend:
            serviceName: client-service
            servicePort: 3000
          path: /?(.*)
  - host: api.skillbased.io
    http:
      paths:
        - backend:
            serviceName: api-service
            servicePort: 8080
          path: /?(.*)
